# ChangeLog for sci-biology/afni
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild:
  removed double dependency entry

  05 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  solving binary conflicts

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  added deps

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  hackin INSTALLDIR to substitute for LIBDIR

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  setting LIBDIR and compiling without target directory

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild:
  typo

  02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  using $(getlib_dir) correctly

  02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  installing in /usr/lib

  02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  using ED instead of D (prefix support)

  02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  installing afni binaries under /usr/bin

  31 Mar 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  removed commented lines from earlier ebuild versions

  25 Mar 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild:
  updated nonlive ebuild

  25 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  referencing rdepend

  25 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  unindented accolades

  24 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  no longer making afni bin, compiling everything with -j1

  24 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  fixed weird SUMA/SUMA_Makefile logic

  19 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  depend on  x11-libs/libGLw

  19 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild: